# yifei-ai-logistics-system

./: .env.example  .gitignore  CONTEXT-MAP.md  CONTEXT.md  Dockerfile  README.en.md  README.md  docker-compose.ai.yml  docker-compose.yml  pom.xml  practice-project-about-develop.code-workspace
ai-service/: CONTEXT.md  Dockerfile  pyproject.toml
ai-service/config/: providers.yml
ai-service/prompts/analysis/: daily-briefing.yml
ai-service/prompts/chat/: assistant-chat.yml  grounding-check.yml  intent-classify.yml
ai-service/prompts/memory/: memory-extract.yml
ai-service/prompts/sql/: sql-generate.yml
ai-service/src/ai_service/: __init__.py  main.py
ai-service/src/ai_service/api/: __init__.py  chat.py  health.py  memory.py  rag.py  tasks.py  tools.py
ai-service/src/ai_service/config/: settings.py
ai-service/src/ai_service/core/: __init__.py  agent.py  intent.py  model_gateway.py  prompt_engine.py
ai-service/src/ai_service/infrastructure/: __init__.py  java_client.py  qdrant_client.py  redis_client.py
ai-service/src/ai_service/memory/: __init__.py  extractor.py  merger.py
ai-service/src/ai_service/rag/: __init__.py  retriever.py
ai-service/src/ai_service/validation/: __init__.py
ai-service/tests/unit/: test_chat.py  test_config.py  test_core.py  test_health.py  test_memory.py  test_prompt_engine.py  test_rag.py  test_tasks.py  test_tools.py
docs/: README.md  ai-assistant-design.md  ai-sse-contract.md  architecture.md  auth-api.md  configuration.md  development-guide.md  environment-versions.md  frontend.md  getting-started.md  logistics-api.md  (+12 more)
(+459 files in other folders)
